--- a/bookHub/css/styles.css
+++ b/bookHub/css/styles.css
@@ -34,6 +34,9 @@ body {
     border-radius: 0.25rem;
     border-radius: 13px;
 }
+.btn-login:hover{
+    background-color: #BC07CB;
+}
 .navbar-nav .nav-item .nav-link {
     padding-right: 1rem;
 }
@@ -381,7 +384,9 @@ h5{
     width: 70%;
 }
 .btn-add-cart:hover {
-    background-color: #7d1387;
+    background-color: #7f6fdc;
+
+
 }
 .btn-review {
     background-color: #91009D;
@@ -393,6 +398,10 @@ h5{
     display: block;
     width: 25%;
     text-align: center;
+}
+.btn-review:hover{
+    background-color: #BC07CB;
+
 }
 .text-muted {
     color: #6c757d;
