--- a/bookHub/css/styles.css
+++ b/bookHub/css/styles.css
@@ -71,7 +71,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(168, 0, 248, 0.4); /* Purple overlay with 50% opacity */
+    background-color: rgba(168, 0, 248, 0.4); /* 50% opacidad al color Morado */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -412,18 +412,4 @@ h5{
     background-color:#f8cff6 ;
 }
 
-/*Estilos del carrito*/
 
-.pedido-container {
-    display: flex;
-    gap: 20px;
-    background-color: white;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    justify-content: center;
-    align-items: center;
-    margin: auto;
-    width: 80%;
-
-}
